--- a/Organization Site/package.json
+++ b/Organization Site/package.json
@@ -12,6 +12,7 @@
     "codyframe": "^4.0.5",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
+    "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.8.1",
